welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:34: error: not found: value ligne
		setPos(getX+ligne,getY)
                            ^ZigZag:39: error: not found: value ligne
			ligne=-1
                        ^ZigZag:43: error: not found: value ligne
			ligne=1
                        ^