welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
var compteur = 1
var ligne = 1
ecritMessage("0")
droite
while (!fini){
serpent
ecritMessage(compteur)
compteur=compteur+1
}

}

def fini():Boolean={
	if(getX== getMondeLargeur()-1&&getY == getMondeHauteur()-1){
		return true
	}
	else return false
}




	if(getY!=getMondeHauteur&&getX!=getMondeLargeur-1){
		setPos(getX+1,getY)
	}
	else if(getY!=getMondeHauteur&&getX==getMondeLargeur-1){
		setPos(0,getY+1)
	}


def serpent(){
	if(!estFaceMur){
		setPos(getX+ligne,getY)
	}
	else{
		if(getY==getMondeLargeur()){
			setPos(getX,getY+1)
			ligne=-1
		}
		else if(getY==0){
			setPos(getX,getY+1)
			ligne=1
		}
	}
}